# Uni-Kousei

./: .gitignore  main.py  pyproject.toml  requirements.txt
bot/: handlers.py  keyboards.py  scheduler.py  states.py
core/: services.py
db/: database.py  models.py  queries.py
